		Cisco WS-C3560V2-24PS (#1049), Netgear FS726TP (#859) by Aaron Dummer
	update: port link popup now has asset no search field (#949) by Thomas Uhde
	update: searches now examine 'dictionary' attributes (#1003)
	update: exclude some elements when printing to paper (#464)
	update: add resource pool info to the Virtual Resources cluster portlet (#915)
	update: use suggest-menu for tag assignment
	new feature: port tracing (#333)
	new feature: bulk selection and deslection of object rackspace checkboxes by Matthew Kelch
0.20.5 2013-06-23
	bugfix: 500 server error if protocol was not specified in
		terminal_settings subroutine
	bugfix: Virtual Resources page threw exception if a hypervisor/resource pool
		was not associated with a cluster (#823)
	bugfix: contained objects were displayed without container's rackspace
		allocation information (#825)
	bugfix: when mounting an object, list of racks was improperly grouped if
		duplicate row names existed (#839)
	bugfix: invalid search result when only one location matched (#843)
	bugfix: when there's no local account created while using LDAP auth,
		quick links can't be saved on that account (#831)
	bugfix: ip tree: "Routed by" column displays routers in aggregate networks (#773)
	bugfix: UCS gateway was broken since 0.20.4
	bugfix: user-overrided config values were displayed in global config editor form
	bugfix: API: built-in hook functions were not called in 'before' and 'after' modes
	bugfix: Linux host's port status fetching was broken (#903)
	bugfix: recognize unqualified hostnames in URLs (#1023)
	update: search improvements:
		- redirect to object when search by IP lead to valid allocation
		- if search result is same type of object, preserve opened tab
		- display search query in form field when search return multiple results
		- search for rack rows by name (#885)
	update: handle EntityNotFoundException as redirect to main page and
		show appropriate error message