@@ -5437,4 +5437,14 @@ function getObjectPortCount ($object_id)
 	return $result->fetch (PDO::FETCH_COLUMN, 0);
 }
 
+function getEntitiesCount ($realm)
+{
+	global $SQLSchema;
+	if (!isset ($SQLSchema[$realm]))
+		throw new InvalidArgException ('realm', $realm);
+	$table = $SQLSchema[$realm]['table'];
+	$result = usePreparedSelectBlade ("SELECT COUNT(*) FROM `$table`");
+	return $result->fetch (PDO::FETCH_COLUMN, 0);
+}
+
 ?>
